layout do admin

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,10 @@
 {% extends "admin/base_site.html" %}
-{% load i18n static %}
+{% load static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />{% endblock %}
+{% block extrastyle %}
+    {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />
+{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 
@@ -9,72 +12,137 @@
 
 {% block breadcrumbs %}{% endblock %}
 
+{% block content_title %}{% endblock %}
+
 {% block content %}
-<div id="content-main">
 
-{% if app_list %}
-    {% for app in app_list %}
-        <div class="module">
-        <table summary="{% blocktrans with app.name as name %}Models available in the {{ name }} application.{% endblocktrans %}">
-        <caption><a href="{{ app.app_url }}" class="section">{% blocktrans with app.name as name %}{{ name }}{% endblocktrans %}</a></caption>
-        {% for model in app.models %}
-            <tr>
-            {% if model.perms.change %}
-                <th scope="row"><a href="{{ model.admin_url }}">{{ model.name }}</a></th>
-            {% else %}
-                <th scope="row">{{ model.name }}</th>
-            {% endif %}
+<div class="container-fluid">
+    <div class="row-fluid dashboard-tools">
+        <div class="span3 recent-actions">
+            <h2>ERP BACE</h2>
+            <div class="well">
+                {% if is_app_index %}
+                    <p class="app-name">
+                        {% for app in app_list %}
+                            ({{ name }})
+                        {% endfor %}
+                    </p>
+                {% endif %}
+                {% if is_app_index %}
+                    {% load bootstrap_template_tags %}
+                    {% get_admin_log_for_app 10 as admin_log for_user user %}
+                {% else %}
+                    {% load log %}
+                    {% get_admin_log 10 as admin_log for_user user %}
+                {% endif %}
+                {% if not admin_log %}
+                    <p>None available</p>
+                {% else %}
+                    <ul class="action-list">
+                    {% for entry in admin_log %}
+                        <li>
+                        {% if entry.is_addition %}
+                            <i class="icon-plus"></i>
+                        {% elif entry.is_change %}
+                            <i class="icon-pencil"></i>
+                        {% elif entry.is_deletion %}
+                            <i class="icon-minus"></i>
+                        {% endif %}
 
-            {% if model.perms.add %}
-                <td><a href="{{ model.admin_url }}add/" class="addlink">{% trans 'Add' %}</a></td>
-            {% else %}
-                <td>&nbsp;</td>
-            {% endif %}
+                        {% if entry.content_type %}
+                            <span class="mini quiet">{% filter capfirst %}{% endfilter %}</span>
+                        {% else %}
+                            <span class="mini quiet">Unknown content</span>
+                        {% endif %}<br/>
 
-            {% if model.perms.change %}
-                <td><a href="{{ model.admin_url }}" class="changelink">{% trans 'Change' %}</a></td>
-            {% else %}
-                <td>&nbsp;</td>
-            {% endif %}
-            </tr>
-        {% endfor %}
-        </table>
+                        {% if entry.is_deletion or not entry.get_admin_url %}
+                            {{ entry.object_repr }}
+                        {% else %}
+                            <a href="{{ admin_root_url }}{{ entry.get_admin_url }}">{{ entry.object_repr }}</a>
+                        {% endif %}
+                        </li>
+                    {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
         </div>
-    {% endfor %}
-{% else %}
-    <p>{% trans "You don't have permission to edit anything." %}</p>
-{% endif %}
-</div>
-{% endblock %}
+        <div class="span9 app-list">
+            {% if app_list %}
+                <h2>Módulos</h2>
+                {% for app in app_list %}
+                    <table class="table table-striped table-bordered table-condensed">
+                        <thead>
+                          <tr>
+                            <th colspan="4">
+                                <h3>
+                                    <a href="{{ app.app_url }}" class="section" >
+                                        {{ name }}
+                                    </a>
+                                </h3>
+                            </th>
+                          </tr>
+                        </thead>
 
-{% block sidebar %}
-<div id="content-related">
-    <div class="module" id="recent-actions-module">
-        <h2>{% trans 'Recent Actions' %}</h2>
-        <h3>{% trans 'My Actions' %}</h3>
-            {% load log %}
-            {% get_admin_log 10 as admin_log for_user user %}
-            {% if not admin_log %}
-            <p>{% trans 'None available' %}</p>
+                        <tbody>
+                            {% for model in app.models %}
+                                <tr>
+                                {% if model.admin_url %}
+                                    <td class="model-name"><a href="{{ model.admin_url }}">{{ model.name }}</a></td>
+                                {% else %}
+                                    <td class="model-name">{{ model.name }}</td>
+                                {% endif %}
+
+                                <td class="search-in-this-model hidden-phone">{% if model.perms.change %}
+                                    <form class="form-search" method="get" action="{{ model.admin_url }}">
+                                      <div class="input-append">
+                                        <input type="text" name="q" size="16" id="prependedInput" class="search-query input-medium" placeholder='Pesquisar'>
+                                        <button class="btn" type="submit"><i class="icon-search"></i></button>
+                                      </div>
+                                    </form>
+                                    {% endif %}</td>
+
+                                <td>{% if model.add_url %}
+                                        <a href="{{ model.add_url }}" class="btn btn-primary pull-right">Adicionar</a>
+                                    {% endif %}</td>
+                                <td>{% if model.admin_url %}
+                                        <a href="{{ model.admin_url }}" class="btn btn-info pull-right">Editar</a>
+                                    {% endif %}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endfor %}
             {% else %}
-            <ul class="actionlist">
-            {% for entry in admin_log %}
-            <li class="{% if entry.is_addition %}addlink{% endif %}{% if entry.is_change %}changelink{% endif %}{% if entry.is_deletion %}deletelink{% endif %}">
-                {% if entry.is_deletion or not entry.get_admin_url %}
-                    {{ entry.object_repr }}
-                {% else %}
-                    <a href="{{ entry.get_admin_url }}">{{ entry.object_repr }}</a>
-                {% endif %}
-                <br/>
-                {% if entry.content_type %}
-                    <span class="mini quiet">{% filter capfirst %}{% trans entry.content_type.name %}{% endfilter %}</span>
-                {% else %}
-                    <span class="mini quiet">{% trans 'Unknown content' %}</span>
-                {% endif %}
-            </li>
-            {% endfor %}
-            </ul>
+                <p>Você não possui permissão</p>
             {% endif %}
+        </div>
     </div>
 </div>
+
 {% endblock %}
+
+{% block js_footer %}
+    <script type="text/javascript">
+    (function ($) {
+        swap_containers = function(container){
+            container = $(container);
+            container.remove();
+            
+            $('.dashboard-tools').append(container.prop('outerHTML'));
+        }
+
+        swap_if_necessary = function(){
+            width = Math.max( $(window).innerWidth(), window.innerWidth)
+            if(width < '767' && $('.recent-actions').isBefore('.app-list')){
+                swap_containers('.recent-actions');
+            } 
+            else if(width > '767' && $('.recent-actions').isAfter('.app-list')){
+                swap_containers('.app-list');
+            }
+        }
+
+        $(window).resize(swap_if_necessary);
+        $(document).ready(swap_if_necessary);
+    })(django.jQuery);
+    </script>
+{% endblock js_footer %}
