--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,62 +1,120 @@
-{% load static %}{% load url from future %}<!DOCTYPE html>
+{% load admin_static admin_urls bootstrap_template_tags %}<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
 <title>{% block title %}{% endblock %}</title>
-<link rel="stylesheet" type="text/css" href="{% block stylesheet %}{% static "admin/css/base.css" %}{% endblock %}" />
+{# bootstrap #}
+{% block css_commons %}
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/commons.css" %}" />
+{% endblock css_commons %}
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/bootstrap.min.css" %}" />
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/bootstrap-responsive.min.css" %}" />
+
 {% block extrastyle %}{% endblock %}
-<!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{% block stylesheet_ie %}{% static "admin/css/ie.css" %}{% endblock %}" /><![endif]-->
-{% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}" />{% endif %}
-<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
+
+{% if LANGUAGE_BIDI %}
+    <link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}" />
+{% endif %}
+
+<script type="text/javascript">
+    window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";
+</script>
+
 {% block extrahead %}{% endblock %}
+
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
 </head>
 {% load i18n %}
 
 <body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}">
 
-<!-- Container -->
-<div id="container">
-
-    {% if not is_popup %}
+{% if not is_popup %}
     <!-- Header -->
-    <div id="header">
-        <div id="branding">
-        {% block branding %}{% endblock %}
-        </div>
+    <div id="header" class="navbar navbar-inverse navbar-fixed-top">
         {% if user.is_active and user.is_staff %}
-        <div id="user-tools">
-            {% trans 'Welcome,' %}
-            <strong>{% filter force_escape %}{% firstof user.first_name user.username %}{% endfilter %}</strong>.
-            {% block userlinks %}
-                {% url 'django-admindocs-docroot' as docsroot %}
-                {% if docsroot %}
-                    <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
-                {% endif %}
-                <a href="{% url 'admin:password_change' %}">
-                {% trans 'Change password' %}</a> /
-                <a href="{% url 'admin:logout' %}">
-                {% trans 'Log out' %}</a>
-            {% endblock %}
-        </div>
+            <div class="navbar-inner" id="nav-menu-top-bar">
+                <div class="container-fluid">
+                    {% block branding %}{% endblock %}
+                    {% block nav-global %}{% endblock %}
+                    {% if user.is_active and user.is_staff %}
+                        <div id="user-tools" class="pull-right">
+                            <div class="btn-group pull-right">
+                                <a href="{% if user.has_usable_password %}{% url user|user_admin_urlname:'change' user.pk|admin_urlquote %}{% else %}#{% endif %}" class="btn btn-primary">
+                                <i class="icon white user"></i>
+                                 @{% filter force_escape %}{% firstof user.get_short_name|lower user.get_username|lower %}{% endfilter %}
+                                </a>
+                                <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle"><span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    {% block userlinks %}
+                                        {% url 'django-admindocs-docroot' as docsroot %}
+                                        {% if docsroot %}
+                                            <li>
+                                                <a href="{{ docsroot }}"><i class="icon-pencil"></i> {% trans 'Documentation' %}</a>
+                                            </li>
+                                        {% endif %}
+                                        {% if user.has_usable_password %}
+                                            <li>
+                                                <a href="{% url 'admin:password_change' %}">
+                                                    <i class="icon-pencil"></i>
+                                                    {% trans 'Change password' %}
+                                                </a>
+                                            </li>
+                                        {% endif %}
+                                        <li>
+                                            <a href="{% url 'admin:logout' %}">
+                                                <i class="icon-off"></i>
+                                                {% trans 'Log out' %}
+                                            </a>
+                                        </li>
+                                    {% endblock %}
+                                </ul>
+                            </div>
+                        </div>
+                    {% endif %}
+                    <p class="welcome-message pull-right hidden-phone">
+                        <i class="icon-user icon-white"></i>
+                        {% trans 'Welcome,' %}
+                        <strong>{% filter force_escape %}{% firstof user.get_short_name user.get_username %}{% endfilter %}</strong>.
+                    </p>
+                </div>
+            </div>
         {% endif %}
-        {% block nav-global %}{% endblock %}
     </div>
     <!-- END Header -->
-    {% block breadcrumbs %}<div class="breadcrumbs"><a href="/">{% trans 'Home' %}</a>{% if title %} &rsaquo; {{ title }}{% endif %}</div>{% endblock %}
+{% endif %}
+<!-- Container -->
+<div id="main-container" class='container-fluid'>
+
+    {% if not is_popup %}
+        {% block breadcrumbs %}
+            <ul class="breadcrumb">
+                <li>
+                    <a href="/">
+                        {% trans 'Home' %}
+                    </a>
+                    <span class="divider"> &rsaquo; </span>
+                </li>
+                <li class="active">
+                    {% if title %}{{ title }}{% endif %}
+                </li>
+            </ul>
+        {% endblock %}
     {% endif %}
 
     {% block messages %}
         {% if messages %}
-        <ul class="messagelist">{% for message in messages %}
-          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}</ul>
-        {% endif %}
+            {% for message in messages %}
+                <div class="alert alert-{% if message.tags == 'info' %}success{% else %}message.tags{% endif %}">
+                    <button data-dismiss="alert" class="close" type="button">×</button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% endif %}
     {% endblock messages %}
 
     <!-- Content -->
     <div id="content" class="{% block coltype %}colM{% endblock %}">
         {% block pretitle %}{% endblock %}
-        {% block content_title %}{% if title %}<h1>Sistema de Automação</h1>{% endif %}{% endblock %}
+        {% block content_title %}{% if title %}<h1>{{ title }}</h1>{% endif %}{% endblock %}
         {% block content %}
         {% block object-tools %}{% endblock %}
         {{ content }}
@@ -69,6 +127,12 @@
     {% block footer %}<div id="footer"></div>{% endblock %}
 </div>
 <!-- END Container -->
+{% block js_footer_commons %}
+    <script>window.django || document.write('<script src="{% static "admin/js/jquery.js" %}">\x3C/script><script src="{% static "admin/js/jquery.init.js" %}">\x3C/script>')</script>
+    <script type="text/javascript" src="{% static "admin/js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "admin/js/commons.js" %}"></script>
+{% endblock js_footer_commons %}
 
+{% block js_footer %}{% endblock js_footer %}
 </body>
 </html>
