--- a/templates/admin/includes/fieldset.html
+++ b/templates/admin/includes/fieldset.html
@@ -1,29 +1,79 @@
+{% load bootstrap_template_tags %}
 <fieldset class="module aligned {{ fieldset.classes }}">
     {% if fieldset.name %}<h2>{{ fieldset.name }}</h2>{% endif %}
     {% if fieldset.description %}
         <div class="description">{{ fieldset.description|safe }}</div>
     {% endif %}
     {% for line in fieldset %}
-        <div class="form-row{% if line.fields|length_is:'1' and line.errors %} errors{% endif %}{% for field in line %} {{ field.field.name }}{% endfor %}">
-            {% if line.fields|length_is:'1' %}{{ line.errors }}{% endif %}
+            
             {% for field in line %}
-                <div{% if not line.fields|length_is:'1' %} class="field-box{% if not field.is_readonly and field.errors %} errors{% endif %}"{% endif %}>
+                <div class="control-group{% if field.errors %} error{% endif %} {% if field.field.name %} field-{{ field.field.name }}{% endif %}">
                     {% if not line.fields|length_is:'1' and not field.is_readonly %}{{ field.errors }}{% endif %}
-                    {% if field.is_checkbox %}
-                        {{ field.field }}{{ field.label_tag }}
-                    {% else %}
-                        {{ field.label_tag }}
-                        {% if field.is_readonly %}
-                            <p>{{ field.contents }}</p>
+                        {% if field.is_checkbox %}
+                            <div class="controls">
+                                <label class="checkbox">
+                                    {{ field.field }} <span>{{ field.label_tag }}</span>
+                                </label>
+
+                                {% for error in field.field.errors %}
+                                    <span class="help-inline">{{ error }}</span>
+                                {% endfor %}
+
+                                {% if field.field.help_text %}
+                                    <p class="help-block">
+                                        {{ field.field.help_text|safe }}
+                                    </p>
+                                {% endif %}
+                            </div>
                         {% else %}
-                            {{ field.field }}
+                            {% if field.field|widget_type == 'adminsplitdatetime' %}
+                                <div class="control-label">{{ field.label_tag }}</div>
+                                <div class="controls">
+                                    {% if field.is_readonly %}
+                                        <p>{{ field.contents|linebreaksbr }}</p>
+                                    {% else %}
+                                        {{ field.field }}
+                                    {% endif %}
+
+                                    {% for error in field.field.errors %}
+                                        <span class="help-inline">{{ error }}</span>
+                                    {% endfor %}
+
+                                    {% if field.field.help_text %}
+                                        <p class="help-block">
+                                            {{ field.field.help_text|safe }}
+                                        </p>
+                                    {% endif %}
+                                </div>
+                                {% else %}
+                                <div class="control-label">{{ field.label_tag }}</div>
+                                <div class="controls">
+                                    {% if field.is_readonly %}
+                                        <p>{{ field.contents|linebreaksbr }}</p>
+                                    {% else %}
+                                        {% if field.field|widget_type == 'adminradioselect'  %}
+                                            {{ field.field }}
+                                        {% else %}
+                                            {{ field.field|add_class:"span8" }}
+                                        {% endif %}
+                                        
+                                    {% endif %}
+
+                                    {% for error in field.field.errors %}
+                                        <span class="help-inline">{{ error }}</span>
+                                    {% endfor %}
+
+                                    {% if field.field.help_text %}
+                                        <p class="help-block">
+                                            {{ field.field.help_text|safe }}
+                                        </p>
+                                    {% endif %}
+
+                                </div>
+                            {% endif %}
                         {% endif %}
-                    {% endif %}
-                    {% if field.field.help_text %}
-                        <p class="help">{{ field.field.help_text|safe }}</p>
-                    {% endif %}
+
                 </div>
             {% endfor %}
-        </div>
     {% endfor %}
 </fieldset>
