--- a/templates/admin/submit_line.html
+++ b/templates/admin/submit_line.html
@@ -1,8 +1,27 @@
-{% load i18n %}
-<div class="submit-row">
-{% if show_save %}<input type="submit" value="{% trans 'Save' %}" class="default" name="_save" {{ onclick_attrib }}/>{% endif %}
-{% if show_delete_link %}<p class="deletelink-box"><a href="delete/" class="deletelink">{% trans "Delete" %}</a></p>{% endif %}
-{% if show_save_as_new %}<input type="submit" value="{% trans 'Save as new' %}" name="_saveasnew" {{ onclick_attrib }}/>{%endif%}
-{% if show_save_and_add_another %}<input type="submit" value="{% trans 'Save and add another' %}" name="_addanother" {{ onclick_attrib }} />{% endif %}
-{% if show_save_and_continue %}<input type="submit" value="{% trans 'Save and continue editing' %}" name="_continue" {{ onclick_attrib }}/>{% endif %}
+{% load i18n admin_urls %}
+<div class="form-actions navbar navbar-fixed-bottom">
+    <div class="container">
+        <div class="pull-left delete-link-box">
+            {% if show_delete_link %}
+                <a href="{% url opts|admin_urlname:'delete' original.pk|admin_urlquote %}" class="btn btn-danger">{% trans "Delete" %}</a>
+            {% endif %}
+        </div>
+        <div class="pull-right save-options-box">
+            {% if show_save_and_continue %}
+                <input type="submit" value="{% trans 'Save and continue editing' %}" name="_continue" {{ onclick_attrib }} class="btn btn-primary"/>
+            {% endif %}
+
+            {% if show_save_as_new %}
+                <input type="submit" value="{% trans 'Save as new' %}" name="_saveasnew" {{ onclick_attrib }} class="btn"/>
+            {%endif%}
+
+            {% if show_save_and_add_another %}
+                <input type="submit" value="{% trans 'Save and add another' %}" name="_addanother" {{ onclick_attrib }} class="btn"/>
+            {% endif %}
+
+            {% if show_save %}
+                <input type="submit" value="{% trans 'Save' %}" name="_save" {{ onclick_attrib }} class="btn"/>
+            {% endif %}
+        </div>
+    </div>
 </div>
