correcao no modulo de producao

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -23,12 +23,12 @@
 <div id="content-main">
     <div class="row-fluid">
         <div class="well span6 well-wrapper-form">
-            <img class="img-circle logo-admin" src="{% static "admin/img/logo-140x140.png" %}" alt="{{ site.name }}">
+          <img class="img-circle logo-admin" src="http://localhost/static/admin/img/logo_bace.png" alt="{{ site.name }}">
             <form class="bs-docs-example form-inline" id="login-form" action="{{ app_path }}" method="post">
                 {% csrf_token %}
                 <fieldset>
                     <legend>
-                        {% trans 'Django administration' %} - {{ title }}
+                        BACE ERP
                     </legend>
                     {% if form.errors and not form.non_field_errors and not form.this_is_the_login_form.errors %}
                         <p class="errornote alert alert-error fade in">
