--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,7 +1,7 @@
 {% load admin_static admin_urls bootstrap_template_tags %}<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
-<title>{% block title %}{% endblock %}</title>
+<title>BACE ERP</title>
 {# bootstrap #}
 {% block css_commons %}
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/commons.css" %}" />
