configuracao no template do admin e arquivos de midia

--- a/templates/admin/edit_inline/stacked.html
+++ b/templates/admin/edit_inline/stacked.html
@@ -44,7 +44,7 @@
           prefix: '{{ inline_admin_formset.formset.prefix }}',
           adminStaticPrefix: '{% static "admin/" %}',
           deleteText: '<i class="icon-minus-sign"></i> {% trans "Remove" %}',
-          addText: '{% blocktrans with verbose_name=inline_admin_formset.opts.verbose_name|title %}<i class="icon-plus-sign"></i> Add another {{ verbose_name }}{% endblocktrans %}'
+          addText: '{% blocktrans with verbose_name=inline_admin_formset.opts.verbose_name|title %}<i class="icon-plus-sign"></i> Adicionar outro {{ verbose_name }}{% endblocktrans %}'
         });
 })(django.jQuery);
 </script>
