--- a/templates/admin/edit_inline/tabular.html
+++ b/templates/admin/edit_inline/tabular.html
@@ -103,7 +103,7 @@
     $("#{{ inline_admin_formset.formset.prefix }}-group .tabular.inline-related tfoot .move-add-row-after-me").tabularFormset({
           prefix: "{{ inline_admin_formset.formset.prefix }}",
           adminStaticPrefix: '{% static "admin/" %}',
-          addText: '{% blocktrans with inline_admin_formset.opts.verbose_name|title as verbose_name %}<i class="icon-plus-sign"></i> Add another {{ verbose_name }}{% endblocktrans %}',
+          addText: '{% blocktrans with inline_admin_formset.opts.verbose_name|title as verbose_name %}<i class="icon-plus-sign"></i> Adicionar outro {{ verbose_name }}{% endblocktrans %}',
           deleteText: '<i class="icon-minus-sign"></i>{% trans 'Remove' %}'
     });
 })(django.jQuery);
