--- a/templates/admin/submit_line.html
+++ b/templates/admin/submit_line.html
@@ -8,7 +8,7 @@
         </div>
         <div class="pull-right save-options-box">
             {% if show_save_and_continue %}
-                <input type="submit" value="{% trans 'Save and continue editing' %}" name="_continue" {{ onclick_attrib }} class="btn btn-primary"/>
+                <input type="submit" value="{% trans 'Salvar e continuar editando' %}" name="_continue" {{ onclick_attrib }} class="btn btn-primary"/>
             {% endif %}
 
             {% if show_save_as_new %}
@@ -16,11 +16,11 @@
             {%endif%}
 
             {% if show_save_and_add_another %}
-                <input type="submit" value="{% trans 'Save and add another' %}" name="_addanother" {{ onclick_attrib }} class="btn"/>
+                <input type="submit" value="{% trans 'Salvar e Adicionar outro' %}" name="_addanother" {{ onclick_attrib }} class="btn"/>
             {% endif %}
 
             {% if show_save %}
-                <input type="submit" value="{% trans 'Save' %}" name="_save" {{ onclick_attrib }} class="btn"/>
+                <input type="submit" value="{% trans 'Salvar' %}" name="_save" {{ onclick_attrib }} class="btn"/>
             {% endif %}
         </div>
     </div>
