--- a/templates/admin/modulos/automacao/change_form.html
+++ b/templates/admin/modulos/automacao/change_form.html
@@ -99,9 +99,9 @@
 </div>
 <script type="text/javascript">
   jQuery(function(){
-		jQuery(".field-valor input, #id_valor_total").maskMoney({decimal:".",thousands:"", precision:2})
+		jQuery(".field-valor input, #id_valor_total, .field-peso input").maskMoney({decimal:".",thousands:"", precision:2})
 		jQuery(".add-row a").live("click",function(){
-			jQuery(".field-valor input, #id_valor_total").maskMoney({decimal:".",thousands:"", precision:2});
+			jQuery(".field-valor input, #id_valor_total, .field-peso input").maskMoney({decimal:".",thousands:"", precision:2});
 		})
 		
   })
