--- a/templates/admin/modulos/automacao/add_ordem_fabricacao.html
+++ b/templates/admin/modulos/automacao/add_ordem_fabricacao.html
@@ -58,7 +58,7 @@
             {% endif %}
         {% endif %}
     {% endblock %}
-    <form {% if has_file_field %}enctype="multipart/form-data" {% endif %}action="{{ form_url }}" method="post" id="{{ opts.module_name }}_form" class="form-horizontal well">{% csrf_token %}{% block form_top %}{% endblock %}
+    <form {% if has_file_field %}enctype="multipart/form-data" {% endif %}action="" method="post" id="{{ opts.module_name }}_form" class="form-horizontal well">{% csrf_token %}{% block form_top %}{% endblock %}
 
     {% if is_popup %}<input type="hidden" name="_popup" value="1" />{% endif %}
     {% if save_on_top %}{% block submit_buttons_top %}{% submit_row %}{% endblock %}{% endif %}
@@ -70,21 +70,15 @@
         </p>
     {% endif %}
 
-    {% block field_sets %}
-    {% for fieldset in adminform %}
-      {% include "admin/includes/fieldset.html" %}
-    {% endfor %}
-    {% endblock %}
+		<div class="control-group  field-numero_of">
+			<div class="control-label"><label for="nota_fiscal" class="required">Nota Fiscal:</label></div>
+			<div class="controls">
+				<input class="vTextField span2" id="nota_fiscal_numero" maxlength="30" name="nota_fiscal_numero" type="text" />
+				<input class="btn" id="pesquisa_nota_fiscal" name="pesquisa_nota_fiscal" type="button" value="Pesquisar" />
+			</div>
+		</div>
 
-    {% block after_field_sets %}{% endblock %}
-
-    {% block inline_field_sets %}
-    {% for inline_admin_formset in inline_admin_formsets %}
-        {% include inline_admin_formset.opts.template %}
-    {% endfor %}
-    {% endblock %}
-
-    {% block after_related_objects %}{% endblock %}
+		<div class="list_materiais_nota_fiscal"></div>
 
     {% block submit_buttons_bottom %}{% submit_row %}{% endblock %}
 
@@ -98,7 +92,17 @@
     </form>
 </div>
 <script type="text/javascript">
-  jQuery(function(){
+  jQuery(function(){    
+		
+		jQuery("#pesquisa_nota_fiscal").click(function(){
+			jQuery.post("/admin/automacao/ordemfabricacao/add/pesquisa_nota_fiscal",{
+						"nota_fiscal_numero" : jQuery("#nota_fiscal_numero").val(),
+						"csrfmiddlewaretoken" :jQuery("input[name='csrfmiddlewaretoken']").val()
+				}, function(r){
+				jQuery(".list_materiais_nota_fiscal").html(r);
+			});
+		});
+	
 		jQuery(".field-valor input, #id_valor_total, .field-peso input").maskMoney({decimal:".",thousands:"", precision:2})
 		jQuery(".add-row a").live("click",function(){
 			jQuery(".field-valor input, #id_valor_total, .field-peso input").maskMoney({decimal:".",thousands:"", precision:2});
