casdatro de ordem de fabricacao com model diferente

--- a/templates/admin/modulos/automacao/add_ordem_fabricacao.html
+++ b/templates/admin/modulos/automacao/add_ordem_fabricacao.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/forms-and-widgets.css" %}" />
     <link rel="stylesheet" type="text/css" href="{% static "admin/css/change-form.css" %}" />
 <style>
-
+	.field-nota_fiscal { display: none;}
 </style>
 {% endblock %}
 
