ocultando campo de nota fiscal e moaterial

--- a/baceerp/templates/admin/base_site.html
+++ b/baceerp/templates/admin/base_site.html
@@ -6,9 +6,10 @@
 {% block branding %}
     <a href="{% url 'admin:index' %}" class="brand" id="site-name">BACE</a>    
 <style>
-        form {
+form {
 margin: 0 !important;
 }
+.field-nota_fiscal, .field-materia_nota_fiscal { display: none; }
 </style>
 {% endblock %}
 
