retirando validacao de requisicao

--- a/baceerp/templates/admin/modulos/automacao/add_ordem_fabricacao.html
+++ b/baceerp/templates/admin/modulos/automacao/add_ordem_fabricacao.html
@@ -117,9 +117,7 @@
 		        <div class="pull-left delete-link-box">
 		        </div>
 		        <div class="pull-right save-options-box">
-							<input type="button" value="Salvar e continuar editando" name="_continue"  class="btn btn-primary btn_gera_ordem_fabricacao"/>
-							<input type="button" value="Salvar e Adicionar outro" name="_addanother"  class="btn btn_gera_ordem_fabricacao"/>
-							<input type="button" value="Salvar" name="_save"  class="btn btn_gera_ordem_fabricacao"/>
+							<input type="button" value="Gerar Ordens de Fabricação" name="_continue"  class="btn btn-primary btn_gera_ordem_fabricacao"/>
 		        </div>
 		    </div>
 		</div>
